<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/ivBoard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/board"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/iv1"
        android:onClick="dropIn"
        android:tag="0"
        android:layout_width="129dp"
        android:layout_height="130dp"
        android:layout_marginTop="102dp"
        android:layout_marginStart="6dp"
        app:layout_constraintStart_toStartOf="@id/ivBoard"
        app:layout_constraintTop_toTopOf="@id/ivBoard"
        tools:layout_editor_absoluteX="7dp"
        tools:layout_editor_absoluteY="8dp"
        android:contentDescription="@string/top_left" />

    <ImageView
        android:id="@+id/iv2"
        android:onClick="dropIn"
        android:tag="1"
        android:layout_width="129dp"
        android:layout_height="130dp"
        android:layout_marginTop="102dp"
        android:layout_marginStart="140dp"
        app:layout_constraintStart_toStartOf="@id/ivBoard"
        app:layout_constraintTop_toTopOf="@id/ivBoard"
        tools:layout_editor_absoluteX="7dp"
        tools:layout_editor_absoluteY="8dp"
        android:contentDescription="@string/top_middle" />

    <ImageView
        android:id="@+id/iv3"
        android:onClick="dropIn"
        android:tag="2"
        android:layout_width="129dp"
        android:layout_height="130dp"
        android:layout_marginTop="102dp"
        android:layout_marginStart="271dp"
        app:layout_constraintStart_toStartOf="@id/ivBoard"
        app:layout_constraintTop_toTopOf="@id/ivBoard"
        tools:layout_editor_absoluteX="7dp"
        tools:layout_editor_absoluteY="8dp"
        android:contentDescription="@string/top_right" />

    <ImageView
        android:id="@+id/iv4"
        android:onClick="dropIn"
        android:tag="3"
        android:layout_width="129dp"
        android:layout_height="130dp"
        android:layout_marginTop="234dp"
        android:layout_marginStart="6dp"
        app:layout_constraintStart_toStartOf="@id/ivBoard"
        app:layout_constraintTop_toTopOf="@id/ivBoard"
        tools:layout_editor_absoluteX="7dp"
        tools:layout_editor_absoluteY="8dp"
        android:contentDescription="@string/middle_left" />

    <ImageView
        android:id="@+id/iv5"
        android:onClick="dropIn"
        android:tag="4"
        android:layout_width="129dp"
        android:layout_height="130dp"
        android:layout_marginTop="234dp"
        android:layout_marginStart="140dp"
        app:layout_constraintStart_toStartOf="@id/ivBoard"
        app:layout_constraintTop_toTopOf="@id/ivBoard"
        tools:layout_editor_absoluteX="7dp"
        tools:layout_editor_absoluteY="8dp"
        android:contentDescription="@string/middle_middle" />

    <ImageView
        android:id="@+id/iv6"
        android:onClick="dropIn"
        android:tag="5"
        android:layout_width="129dp"
        android:layout_height="130dp"
        android:layout_marginTop="234dp"
        android:layout_marginStart="271dp"
        app:layout_constraintStart_toStartOf="@id/ivBoard"
        app:layout_constraintTop_toTopOf="@id/ivBoard"
        tools:layout_editor_absoluteX="7dp"
        tools:layout_editor_absoluteY="8dp"
        android:contentDescription="@string/middle_right" />

    <ImageView
        android:id="@+id/iv8"
        android:onClick="dropIn"
        android:tag="6"
        android:layout_width="129dp"
        android:layout_height="130dp"
        android:layout_marginTop="366dp"
        android:layout_marginStart="6dp"
        app:layout_constraintStart_toStartOf="@id/ivBoard"
        app:layout_constraintTop_toTopOf="@id/ivBoard"
        tools:layout_editor_absoluteX="7dp"
        tools:layout_editor_absoluteY="8dp"
        android:contentDescription="@string/bottom_left" />

    <ImageView
        android:id="@+id/iv9"
        android:onClick="dropIn"
        android:tag="7"
        android:layout_width="129dp"
        android:layout_height="130dp"
        android:layout_marginTop="366dp"
        android:layout_marginStart="140dp"
        app:layout_constraintStart_toStartOf="@id/ivBoard"
        app:layout_constraintTop_toTopOf="@id/ivBoard"
        tools:layout_editor_absoluteX="7dp"
        tools:layout_editor_absoluteY="8dp"
        android:contentDescription="@string/bottom_middle" />

    <ImageView
        android:id="@+id/iv7"
        android:onClick="dropIn"
        android:tag="8"
        android:layout_width="129dp"
        android:layout_height="130dp"
        android:layout_marginTop="366dp"
        android:layout_marginStart="271dp"
        app:layout_constraintStart_toStartOf="@id/ivBoard"
        app:layout_constraintTop_toTopOf="@id/ivBoard"
        tools:layout_editor_absoluteX="7dp"
        tools:layout_editor_absoluteY="8dp"
        android:contentDescription="@string/bottom_right" />

    <Button
        android:id="@+id/btnPlayAgain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="112dp"
        android:text="Button"
        android:onClick="playAgain"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="Play Again" />


</androidx.constraintlayout.widget.ConstraintLayout>

